[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tpa64"
version = "0.1.0"
dependencies = ["pyserial", "Pillow"]
description = "USB-TPA64 thermal camera interface"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
