[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpa64"
version = "0.1.0"
description = "Python driver for the USB-TPA64 8x8 thermal camera"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
  { name = "LevyMitsugui"}
]

dependencies = [
  "pyserial",
  "Pillow",
]

keywords = ["thermal", "camera", "usb-tpa64"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",        # or whatever your LICENSE is
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LevyMitsugui/TPA64"
Repository = "https://github.com/LevyMitsugui/TPA64"

[tool.hatch.build.targets.wheel]
packages = ["src/tpa64"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "examples",
  "README.md",
  "LICENSE",
]
